# exp-qt-1

./: CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
cmake/: qt.cmake  sources.cmake
src/demo_window/: CMakeLists.txt  main.cpp  version.ui  window.cpp  window.h  window.ui
src/timetron/: CMakeLists.txt
